Add Clang-Tidy configuration for GCC builds
- Introduced Clang-Tidy integration in CMake for GCC builds to suppress stringop-overflow warnings.
- Updated CMakeLists.txt to conditionally set Clang-Tidy options when the executable is available.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,10 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
     # GCC-specific: disable false positive stringop-overflow warnings with fmt library
     if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         add_compile_options(-Wno-stringop-overflow)
+        if (CLANG_TIDY_EXE)
+            set(CMAKE_CXX_CLANG_TIDY
+                "${CLANG_TIDY_EXE};-config=;--extra-arg=-Wno-stringop-overflow") # remove or override
+        endif()
     endif()
     
     if (ENABLE_WERROR)
